error.txt
    Checking legion-loq-control v0.1.0 (C:\Users\anand\Repos\Legion + Loq Controller)
error[E0425]: cannot find value `set_rapid_charge_arg` in this scope
  --> src\main.rs:89:33
   |
89 |     if let Some(target_state) = set_rapid_charge_arg {
   |                                 ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `set_profile_arg` in this scope
   --> src\main.rs:117:32
    |
117 |     if let Some(profile_str) = set_profile_arg {
    |                                ^^^^^^^^^^^^^^^ not found in this scope

warning: unused imports: `info` and `warn`
 --> src\core\device\detect.rs:3:11
  |
3 | use log::{info, warn};
  |           ^^^^  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: type `Win32_ComputerSystem` should have an upper camel case name
  --> src\platform\windows.rs:11:8
   |
11 | struct Win32_ComputerSystem {
   |        ^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `Win32ComputerSystem`
   |
   = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: type `Win32_Battery` should have an upper camel case name
  --> src\platform\windows.rs:17:8
   |
17 | struct Win32_Battery {
   |        ^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `Win32Battery`

warning: type `Lenovo_BiosSetting` should have an upper camel case name
  --> src\platform\windows.rs:24:8
   |
24 | struct Lenovo_BiosSetting {
   |        ^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `LenovoBiosSetting`

warning: type `Win32_BIOS` should have an upper camel case name
  --> src\platform\windows.rs:29:8
   |
29 | struct Win32_BIOS {
   |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `Win32Bios`

error[E0282]: type annotations needed
   --> src\main.rs:118:36
    |
118 |         let target_profile = match profile_str.as_str() {
    |                                    ^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0425.
For more information about an error, try `rustc --explain E0282`.
warning: `legion-loq-control` (bin "legion-loq-control") generated 5 warnings
error: could not compile `legion-loq-control` (bin "legion-loq-control") due to 3 previous errors; 5 warnings emitted
